<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageitem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/textView3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Home" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOut"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_weight="1"
                android:text="@string/itemlist"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/List"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_weight="1"
                android:scrollbars="horizontal"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newitem" />

            <Button
                android:id="@+id/buttondel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delitem" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>